refactor: tidying up files and directories

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,6 @@
 */__pycache__/
 */*/__pycache__/
 */*/*/__pycache__/
-taskmaker/api/migrations/
 taskmaker/db.sqlite3
-taskmaker/api/creds/google-tasks/*.json
-taskmaker/api/creds/google-calendar/*.json
+taskmaker/api/migrations/
+taskmaker/api/creds/*/*.json
