--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,33 @@
-setuptools
-django
-djangorestframework
-google-api-python-client
-google-auth-httplib2
-google-auth-oauthlib
-drf-yasg
+asgiref==3.8.1
+cachetools==5.5.0
+certifi==2024.8.30
+charset-normalizer==3.3.2
+Django==5.1.1
+djangorestframework==3.15.2
+drf-yasg==1.21.7
+google-api-core==2.19.2
+google-api-python-client==2.145.0
+google-auth==2.34.0
+google-auth-httplib2==0.2.0
+google-auth-oauthlib==1.2.1
+googleapis-common-protos==1.65.0
+httplib2==0.22.0
+idna==3.9
+inflection==0.5.1
+oauthlib==3.2.2
+packaging==24.1
+proto-plus==1.24.0
+protobuf==5.28.1
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pyparsing==3.1.4
+pytz==2024.2
+PyYAML==6.0.2
+requests==2.32.3
+requests-oauthlib==2.0.0
+rsa==4.9
+setuptools==74.1.2
+sqlparse==0.5.1
+tzdata==2024.1
+uritemplate==4.1.1
+urllib3==2.2.3
