--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ certifi==2024.8.30
 charset-normalizer==3.3.2
 Django==5.1.1
 djangorestframework==3.15.2
+djangorestframework-simplejwt
 drf-yasg==1.21.7
 google-api-core==2.19.2
 google-api-python-client==2.145.0
